# clojure-cli-portable-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config
script/: build  build.cmd  build_win  docker_build
src/: clj.rs  cpjar.rs  help.rs  lib.rs  main.rs  parsing.rs  unix.rs  windows.rs
src/windows/: parsing.rs
