[package]
name = "clojurecli"
version = "0.1.0"
authors = ["cark <carkhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
widestring = "0.4.0"
winapi = { version = "0.3.7", features = ["processenv"]}
