[package]
name = "clojurecli"
version = "0.1.0"
authors = ["cark <carkhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "clojure"
path = "src/main.rs"
 
[dependencies]
which = "2.0.1"
md5 = "0.6.1"

[target.'cfg(windows)'.dependencies]
widestring = "0.4.0"
winapi = { version = "0.3.7", features = ["processenv"]}

[target.'cfg(unix)'.dependencies]
exec = "0.3.1"